Made H3 uppercase style

--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
             <div class="row text-center">
                 <div class="col-md-4">
                     <img class ="img-responsive" src="images/lulu-sitting.jpg" alt="Cat sitting">
-                    <h3 class="text-uppercase">Sitting</h3>
+                    <h3>Sitting</h3>
                     <p>https://github.com/udacity/sitting</p>
                 </div>
                 <div class="col-md-4">
                     <img class ="img-responsive" src="images/lulu-thinking.jpg" alt="Cat thinking">
-                    <h3 class="text-uppercase">Thinking</h3>
+                    <h3>Thinking</h3>
                     <p>https://github.com/udacity/thinking</p>
                 </div>
                 <div class="col-md-4">
                     <img class ="img-responsive" src="images/lulu-sleeping.jpg" alt="Cat sleeping">
-                    <h3 class="text-uppercase">Sleeping</h3>
+                    <h3>Sleeping</h3>
                     <p>https://github.com/udacity/sleeping</p>
                 </div>
             </div>
