Added semantic tags

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="row">
+            <div class="row" id="header">
                 <div class="col-md-6">
                     <img class="title-logo" src="images/cat-logo.png" alt="Udacity Logo">
                 </div>
@@ -25,29 +25,29 @@
                     <hr>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="main-picture">
                 <div class="col-md-12">
                     <img class ="img-responsive" src="images/lulu-relaxing.jpg" alt="Cat relaxing">
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="section-title">
                 <div class="col-md-12">
                     <h2 class="text-muted">Favorite activities</h2>
                 </div>
             </div>
-            <div class="row text-center">
+            <div class="row text-center" id="section">
                 <div class="col-md-4">
-                    <img class ="img-responsive" src="images/lulu-sitting.jpg" alt="Cat sitting">
+                    <img class ="img-responsive" src="images/lulu-sitting.jpg" alt="Cat sitting" id="lulu sitting">
                     <h3>Sitting</h3>
                     <p>https://github.com/udacity/sitting</p>
                 </div>
                 <div class="col-md-4">
-                    <img class ="img-responsive" src="images/lulu-thinking.jpg" alt="Cat thinking">
+                    <img class ="img-responsive" src="images/lulu-thinking.jpg" alt="Cat thinking" id="lulu thinking">
                     <h3>Thinking</h3>
                     <p>https://github.com/udacity/thinking</p>
                 </div>
                 <div class="col-md-4">
-                    <img class ="img-responsive" src="images/lulu-sleeping.jpg" alt="Cat sleeping">
+                    <img class ="img-responsive" src="images/lulu-sleeping.jpg" alt="Cat sleeping" id="lulu sleeping">
                     <h3>Sleeping</h3>
                     <p>https://github.com/udacity/sleeping</p>
                 </div>
