Add more semantic tags

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <body>
         <div class="container">
             <div class="row" id="header">
-                <div class="col-md-6">
+                <div class="col-md-6" id="title-logo">
                     <img class="title-logo" src="images/cat-logo.png" alt="Udacity Logo">
                 </div>
-                <div class="col-md-6 text-right text-uppercase">
+                <div class="col-md-6 text-right text-uppercase" id="title">
                     <h1 class="title-super text-thin">Lulu</h1>
                     <h4>"Lady Lu"</h4>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="horizontal line">
                 <div class="col-md-12">
                     <hr>
                 </div>
