--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="row" id="header">
+      <header class="row">
         <div class="col-md-6" id="title-logo">
           <img class="title-logo" src="images/cat-logo.png" alt="Udacity Logo">
         </div>
@@ -19,38 +19,38 @@
           <h1 class="title-super text-thin">Lulu</h1>
           <h4>"Lady Lu"</h4>
         </div>
-      </div>
+      </header>
       <div class="row" id="horizontal line">
         <div class="col-md-12">
           <hr>
         </div>
       </div>
-      <div class="row" id="main-picture">
+      <figure class="row">
         <div class="col-md-12">
           <img class ="img-responsive" src="images/lulu-relaxing.jpg" alt="Cat relaxing">
         </div>
-      </div>
-      <div class="row" id="section-title">
+      </figure>
+      <div class="row">
         <div class="col-md-12">
           <h2 class="text-muted">Favorite activities</h2>
         </div>
       </div>
-      <div class="row text-center" id="section">
-        <div class="col-md-4">
+      <div> class="row text-center"
+        <section class="col-md-4">
           <img class ="img-responsive" src="images/lulu-sitting.jpg" alt="Cat sitting" id="lulu sitting">
           <h3>Sitting</h3>
           <p>https://github.com/udacity/sitting</p>
-        </div>
-        <div class="col-md-4">
+        </section>
+        <section class="col-md-4">
           <img class ="img-responsive" src="images/lulu-thinking.jpg" alt="Cat thinking" id="lulu thinking">
           <h3>Thinking</h3>
           <p>https://github.com/udacity/thinking</p>
-        </div>
-        <div class="col-md-4">
+        </section>
+        <section class="col-md-4">
           <img class ="img-responsive" src="images/lulu-sleeping.jpg" alt="Cat sleeping" id="lulu sleeping">
           <h3>Sleeping</h3>
           <p>https://github.com/udacity/sleeping</p>
-        </div>
+        </section>
       </div>
     </div>
   </body>
