--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <h2 class="text-muted">Favorite activities</h2>
         </div>
       </div>
-      <div> class="row text-center"
+      <div class="row text-center"
         <section class="col-md-4">
           <img class ="img-responsive" src="images/lulu-sitting.jpg" alt="Cat sitting" id="lulu sitting">
           <h3>Sitting</h3>
