--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
           <h2 class="text-muted">Favorite activities</h2>
         </div>
       </div>
-      <div class="row text-center"
+      <div class="row text-center">
         <section class="col-md-4">
-          <img class ="img-responsive" src="images/lulu-sitting.jpg" alt="Cat sitting" id="lulu sitting">
+          <img class ="img-responsive" src="images/lulu-sitting.jpg" alt="Cat sitting" id="lulu-sitting">
           <h3>Sitting</h3>
           <p>https://github.com/udacity/sitting</p>
         </section>
         <section class="col-md-4">
-          <img class ="img-responsive" src="images/lulu-thinking.jpg" alt="Cat thinking" id="lulu thinking">
+          <img class ="img-responsive" src="images/lulu-thinking.jpg" alt="Cat thinking" id="lulu-thinking">
           <h3>Thinking</h3>
           <p>https://github.com/udacity/thinking</p>
         </section>
         <section class="col-md-4">
-          <img class ="img-responsive" src="images/lulu-sleeping.jpg" alt="Cat sleeping" id="lulu sleeping">
+          <img class ="img-responsive" src="images/lulu-sleeping.jpg" alt="Cat sleeping" id="lulu-sleeping">
           <h3>Sleeping</h3>
           <p>https://github.com/udacity/sleeping</p>
         </section>
